Rewrote help text for better context

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div class="container">
-      <p id="helpText">Enter a key to view keycode</p>
+      <p id="helpText">Press a key to view keycode</p>
       <h1 id="keyDisplay"></h1>
     </div>
     <script>
